@@ -1,8 +1,8 @@
 package gcom.gui.cadastro.atualizacaocadastral;
 
 import gcom.atualizacaocadastral.ImovelControleAtualizacaoCadastral;
+import gcom.cadastro.SituacaoAtualizacaoCadastral;
 import gcom.cadastro.imovel.CadastroOcorrencia;
-import gcom.fachada.Fachada;
 import gcom.gui.ActionServletException;
 import gcom.gui.GcomAction;
 import gcom.seguranca.acesso.usuario.Usuario;
@@ -10,7 +10,6 @@ import gcom.util.ConstantesSistema;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
 
 import org.apache.struts.action.ActionForm;
 import org.apache.struts.action.ActionForward;
@@ -18,47 +17,92 @@ import org.apache.struts.action.ActionMapping;
 
 public class AtualizarDadosImovelAtualizacaoCadastralAction extends GcomAction {
 
-	private Fachada fachada = Fachada.getInstancia();
-	
-    public ActionForward execute(ActionMapping actionMapping, ActionForm actionForm, HttpServletRequest httpServletRequest, HttpServletResponse httpServletResponse) throws Exception {
-    	ActionForward retorno =	actionMapping.findForward("filtrarAlteracaoAtualizacaoCadastral");
-        
+	public ActionForward execute(ActionMapping mapping, ActionForm actionForm, HttpServletRequest request, HttpServletResponse response) throws Exception {
 		ExibirAtualizarDadosImovelAtualizacaoCadastralPopupActionForm form = (ExibirAtualizarDadosImovelAtualizacaoCadastralPopupActionForm) actionForm;
 
-        HttpSession sessao = httpServletRequest.getSession(false);
-		
-		Usuario usuario = (Usuario) sessao.getAttribute("usuarioLogado");
-		
-		CadastroOcorrencia cadastroOcorrencia = this.pesquisarCadastroOcorrencia(Integer.parseInt(form.getIdImovel()));
-		
-		if (cadastroOcorrencia != null) {
-			if (cadastroOcorrencia.getIndicadorValidacao().equals(ConstantesSistema.SIM)) {
-				
-				if (!form.getIdRegistrosAutorizados().equals("")) {
-					String registrosAutorizados = form.getIdRegistrosAutorizados();
-					
-					String[] listaIdRegistrosSim = registrosAutorizados.split(",");
-					
-					if (listaIdRegistrosSim != null && !listaIdRegistrosSim.equals("")) {
-						fachada.atualizarIndicadorAutorizacaoColunaAtualizacaoCadastral(Integer.valueOf(form.getIdImovel()),
-								listaIdRegistrosSim, ConstantesSistema.SIM, usuario);
+		ImovelControleAtualizacaoCadastral controle = getFachada().pesquisarImovelControleAtualizacao(new Integer(form.getIdImovel()));
+		CadastroOcorrencia ocorrencia = controle.getCadastroOcorrencia();
+
+		if (ocorrencia != null) {
+			if (permiteAprovarOuConcluirFiscalizacao(controle, ocorrencia.getIndicadorValidacao())) {
+
+				if (isImovelFiscalizado(controle)) {
+					String registrosSelecionados = null;
+
+					if (controle.isEmFiscalizacao()) {
+						registrosSelecionados = form.getIdRegistrosFiscalizados();
+					} else {
+						registrosSelecionados = form.getIdRegistrosAutorizados();
 					}
+
+					if (!registrosSelecionados.equals("")) {
+						String[] listaIdRegistrosSim = registrosSelecionados.split(",");
+
+						if (isDefinicaoSubcategoriaValida(controle, form.getIdImovel(), listaIdRegistrosSim)) {
+							if (listaIdRegistrosSim != null && !listaIdRegistrosSim.equals("")) {
+								getFachada().atualizarIndicadorAutorizacaoColunaAtualizacaoCadastral(Integer.valueOf(form.getIdImovel()), listaIdRegistrosSim, ConstantesSistema.SIM,
+										(Usuario) request.getSession(false).getAttribute("usuarioLogado"), obterCampoParaAtualizar(controle));
+								
+								this.atualizarSituacaoImovel(controle);
+							}
+						} else {
+							throw new ActionServletException("atencao.imovel.sem.subcategorias", "");
+						}
+					} else if (controle.isEmFiscalizacao()) {
+						this.atualizarSituacaoImovel(controle);
+					}
+
+					request.setAttribute("reload", true);
+				} else {
+					throw new ActionServletException("atencao.imovel_nao_fiscalizado", "");
 				}
-				
-				httpServletRequest.setAttribute("reload", true);
 			} else {
-				throw new ActionServletException("atencao.cadastro_ocorrencia_invalido", cadastroOcorrencia.getDescricao());
+				throw new ActionServletException("atencao.cadastro_ocorrencia_invalido", ocorrencia.getDescricao());
 			}
 		} else {
 			throw new ActionServletException("atencao.cadastro_ocorrencia_invalido", "NULO. Carregue o imóvel novamente");
 		}
-		
-        return retorno;
-    }
 
-	private CadastroOcorrencia pesquisarCadastroOcorrencia(Integer idImovel) {
-		ImovelControleAtualizacaoCadastral imovelControleAtualizacaoCadastral = fachada.pesquisarImovelControleAtualizacaoCadastral(idImovel);
-		
-		return imovelControleAtualizacaoCadastral.getCadastroOcorrencia();
+		return mapping.findForward("filtrarAlteracaoAtualizacaoCadastral");
+	}
+
+	private void atualizarSituacaoImovel(ImovelControleAtualizacaoCadastral imovelControle) {
+		if (imovelControle.isEmFiscalizacao()) {
+			getFachada().atualizarSituacaoImovelControle(imovelControle.getImovel().getId(), SituacaoAtualizacaoCadastral.FISCALIZADO);
+		} else if (imovelControle.isPreAprovado() || imovelControle.isFiscalizado()) {
+			getFachada().atualizarSituacaoImovelControle(imovelControle.getImovel().getId(), SituacaoAtualizacaoCadastral.APROVADO);
+		}
+	}
+
+	private boolean isImovelFiscalizado(ImovelControleAtualizacaoCadastral imovelControle) {
+		boolean imovelFiscalizado = true;
+
+		if (imovelControle.isEmFiscalizacao() && !getFachada().possuiInformacoesFiscalizacao(imovelControle)) {
+			imovelFiscalizado = false;
+		}
+
+		return imovelFiscalizado;
+	}
+
+	private String obterCampoParaAtualizar(ImovelControleAtualizacaoCadastral imovelControle) {
+		String campo = "";
+		if (imovelControle.isPreAprovado())
+			campo = "preaprovado";
+
+		if (imovelControle.isEmFiscalizacao() || imovelControle.isFiscalizado())
+			campo = "fiscalizado";
+		return campo;
+	}
+	
+	private boolean permiteAprovarOuConcluirFiscalizacao(ImovelControleAtualizacaoCadastral controle, short indicadorValidacao) {
+		return (controle.isPreAprovado() && retornoValidado(indicadorValidacao)) || controle.isEmFiscalizacao() || controle.isFiscalizado();
+	}
+	
+	private boolean retornoValidado(short indicadorValidacao) {
+		return indicadorValidacao == ConstantesSistema.SIM.shortValue();
+	}
+	
+	private boolean isDefinicaoSubcategoriaValida(ImovelControleAtualizacaoCadastral controle, String idImovel,String[] registrosSelecionados) {
+		return getFachada().isDefinicaoSubcategoriaValida(idImovel, registrosSelecionados);
 	}
 }
